# marvin

./: .gitignore  .pre-commit-config.yaml  404.html  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  Justfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  pages.yml
architecture/: index.html
assets/graph/: index.html
docs/: architecture.md  index.md
docs/assets/: graph.md
docs/guide/: case-study.md  evaluation.md  getting-started.md  skills.md
docs/reference/: cli.md  mcp-tools.md
examples/: README.md
examples/demo_vault/: README.md
examples/demo_vault/Episodic/: Bottoms Transformation.md  Discussing the Fairies.md  Pucks Mistake.md
examples/demo_vault/Procedural/: Play Analysis Strategy.md
examples/demo_vault/Reflective/: The Harshness of Athenian Law.md
examples/demo_vault/Semantic/: A Midsummer Nights Dream Plot.md  Fairy Conflict.md  Fairy Royalty.md  Love Potion Error.md  Oberon.md  Puck Identity.md  Puck.md  Result of Pucks Mistake.md  Titania Enchantment.md  Titania.md
experiments/: README.md
experiments/docs/: IDEA.md  PLAN.md  TODO.md
experiments/scripts/: call_prepare.py  full_play_experiment.py  generate_obsidian_graph.py  patch_worker.py  simulate_midsummer.py  test_entities.py  test_goose_sleep.py  test_marvin.py  test_prompt.py  trigger_sleep.py  update_case_study.py
guide/case-study/: index.html
guide/evaluation/: index.html
guide/getting-started/: index.html
guide/skills/: index.html
reference/cli/: index.html
reference/mcp-tools/: index.html
scripts/: download_longmemeval.py
search/: search_index.json
src/marvin/: __init__.py  broker.py  cli.py  config.py  consolidation.py  decay.py  embeddings.py  extraction.py  git.py  gpu.py  index.py  klines.py  models.py  reranker.py  server.py  service.py  skill.md  toon.py  vault.py  worker.py
src/marvin/eval/: __init__.py  __main__.py  _results.py  demo.py  judge.py  longmemeval.py  reader.py
src/marvin/skill/: SKILL.md
tests/: test_cli.py  test_cli_skill.py  test_consolidation_reflective.py  test_consolidation_semantic.py  test_decay.py  test_demo_midsummer.py  test_embeddings.py  test_eval_judge.py  test_eval_longmemeval.py  test_eval_qa.py  test_eval_reader.py  test_eval_results_path.py  test_gpu_bootstrap.py  test_index.py  test_klines_template.py  test_maintenance.py  test_reranker.py  test_server_tools.py  test_service.py  test_toon.py  test_vault.py
